Minor padding issue fixed, causing sendbtn to be gone on smaller screens

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -210,7 +210,7 @@ body {
 
 .TextMessage {
   height: 100%;
-  width: 94%;
+  width: 91%;
   display: inline;
   border-width: 0;
 }
@@ -260,6 +260,10 @@ input:focus {
 
   .TextInput {
     height: 35px;
+  }
+
+  .TextMessage {
+    width: 94%;
   }
 
   .SendBtn {
